2012-10-14  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/F5BigIp.pm: New implementation for F5
	BigIP support

2012-10-07  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Release 2.05

	* Removed support for F5 BigIP version 4.x because it's end of
	life and outdated. Support for Version 11 is in development.

2012-09-11  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/APC_PowerNet.pm: added support for
	Modular Environmental Manager (MEM)

2012-08-16  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Release 2.04

2012-08-16  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/EmpireSystemedge.pm: CA eHealth
	SystemEDGE support is significantly refactored by Roman Hochuli

2012-07-17  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* configs/torrus-config.pl: default value for
	$Torrus::Collector::SNMP::unreachableTimeout is set to 0 instead
	of 6 hours (never give up on unreachable hosts)

2012-07-08  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/ComtechEFData.pm: new discovery
	module for Comtech EF Data satellite modems

2012-07-04  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* xmlconfig/defaults.xml: new graph view: embedded-small

	* perllib/Torrus/Renderer/RRDtool.pm (rrd_make_graph_opts): new
	view parameter 'graph-colors' and URL variable Gcolors

2012-07-03  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/RRDtool.pm: new RRD graph parameter: border

2012-04-22  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Release 2.03 (bugfix release)

2012-03-20  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Release 2.02

2012-03-13  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm: new parameter
	RFC2863_IF_MIB::sort-by-name
