@@ -42,7 +42,9 @@ if( not $ENV{'TORRUS_TOKEN'} )
 }
 
 my @hosts;
-my $severity;
+
+my $severity = $ENV{'TORRUS_SEVERITY'};
+$severity = 0 unless defined($severity);
 
 my $ok = GetOptions( 'host=s'     => \@hosts,
                      'community=s' => \$Torrus::Snmptrap::community,
@@ -84,17 +86,13 @@ my @varbindlist = ( $Torrus::Snmptrap::enterprise . '.2',
 
                     $Torrus::Snmptrap::enterprise . '.7',
                     OCTET_STRING, $ENV{'TORRUS_TREE'},
-                    
+
+                    $Torrus::Snmptrap::enterprise . '.8',
+                    INTEGER32, $severity,
+
                     $Torrus::Snmptrap::enterprise . '.9',
                     OCTET_STRING, $ENV{'TORRUS_MCOMMENT'}
                     );
-
-if( defined( $severity ) )
-{
-    push( @varbindlist,
-          $Torrus::Snmptrap::enterprise . '.8',
-          INTEGER32, $severity );
-}
 
 foreach my $host ( @Torrus::Snmptrap::hosts )
 {
